--- a/server/.env.example
+++ b/server/.env.example
@@ -2,7 +2,6 @@ APP_NAME=DATN
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -57,5 +56,8 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-# Đường dẫn đến website Frontend
-FRONTEND_URL=http://localhost:3000
+APP_URL=http://localhost             # Đường dẫn đến website Backend (quan trọng)
+FRONTEND_URL=http://localhost:3000   # Đường dẫn đến website Frontend (quan trọng)
+
+# Dường dẫn chấp nhận CSRF đến từ Frontend
+SANCTUM_STATEFUL_DOMAINS="${FRONTEND_URL}"
